# resume-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
src/: embedding_model.py  file_reader.py  main.py  resume_scorer.py
src/notebooks/: resume-rag.ipynb  resume-scorer.ipynb
src/utils/: __init__.py  config.py  logger.py
