[project]
name = "resume-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "yordanoswuletaw",email = "yordanoswuletaw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-core (>=0.3.41,<0.4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pypdf (>=5.3.1,<6.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "streamlit-feedback (>=0.1.4,<0.2.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "langchain-google-vertexai (>=2.0.14,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
